<resources>
    <string name="app_name">FamilyMap</string>

    <!--================-->
    <!-- Login Fragment -->
    <!--================-->
    <string name="host_field">Server Host:</string>
    <string name="port_field">Server Port:</string>
    <string name="username_field">Username:</string>
    <string name="password_field">Password:</string>
    <string name="fname_field">First Name:</string>
    <string name="lname_field">Last Name:</string>
    <string name="email_field">Email:</string>
    <string name="gender_field">Gender:</string>
    <string name="select_male">Male</string>
    <string name="select_female">Female</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="register_successful_toast">Successfully registered %1$s with FamilyMap!</string>
    <string name="register_failed_toast">Registration failed!</string>
    <string name="login_successful_toast">Successfully logged %1$s in to FamilyMap!</string>
    <string name="login_failed_toast">Login failed!</string>
    <string name="invalid_server_toast">Please enter valid server information.</string>
    <string name="invalid_login_toast">Please enter a valid username and password.</string>
    <string name="invalid_register_toast">Please enter valid registration information.</string>
    <string name="register_url">/user/register</string>
    <string name="login_url">/user/login</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_settings">Settings</string>


    <!--==============-->
    <!-- DataSyncTask -->
    <!--==============-->
    <string name="sync_successful_toast">Sync successful</string>
    <string name="sync_failed_toast">Sync failed</string>


    <!--==============-->
    <!-- Map Fragment -->
    <!--==============-->
    <string name="click_a_marker_top">Click on a marker</string>
    <string name="click_a_marker_bottom">to see event details</string>


    <!--===================-->
    <!-- Settings Fragment -->
    <!--===================-->
    <string name="life_story_lines_option">Life story lines</string>
    <string name="life_story_lines_detail">Show life story lines</string>
    <string name="family_tree_lines_option">Family tree lines</string>
    <string name="family_tree_lines_detail">Show family tree lines</string>
    <string name="spouse_lines_option">Spouse lines</string>
    <string name="spouse_lines_detail">Show spouse lines</string>
    <string name="map_type_option">Map type</string>
    <string name="map_type_detail">Change the map\'s background</string>
    <string name="resync_data_option">Re-sync data</string>
    <string name="resync_data_detail">From the FamilyMap server</string>
    <string name="resync_data_button">Re-sync</string>
    <string name="logout_option">Logout</string>
    <string name="logout_detail">Return to login screen</string>
    <string name="logout_button">Logout</string>
    <string-array name="line_color_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="map_type_array">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>


    <!--===================-->
    <!-- Filter Fragment -->
    <!--===================-->
    <string name="filter_baptism_events_option">Baptism events</string>
    <string name="filter_baptism_events_detail">Filter out all baptism events</string>
    <string name="filter_birth_events_option">Birth events</string>
    <string name="filter_birth_events_detail">Filter out all birth events</string>
    <string name="filter_census_events_option">Census events</string>
    <string name="filter_census_events_detail">Filter out all census</string>
    <string name="filter_christening_events_option">Christening events</string>
    <string name="filter_christening_events_detail">Filter out all christening events</string>
    <string name="filter_death_events_option">Death events</string>
    <string name="filter_death_events_detail">Filter out all death events</string>
    <string name="filter_marriage_events_option">Marriage events</string>
    <string name="filter_marriage_events_detail">Filter out all marriage events</string>
    <string name="filter_fathers_side_option">Father\'s side</string>
    <string name="filter_fathers_side_detail">Filter out all events on father\'s side</string>
    <string name="filter_mothers_side_option">Mother\'s side</string>
    <string name="filter_mothers_side_detail">Filter out all events on mother\'s side</string>
    <string name="filter_male_events_option">Male events</string>
    <string name="filter_male_events_detail">Filter out all male events</string>
    <string name="filter_female_events_option">Female events</string>
    <string name="filter_female_events_detail">Filter out all female events</string>


    <!--===================-->
    <!-- Person Fragment -->
    <!--===================-->
    <string name="person_fname_detail">First name</string>
    <string name="person_lname_detail">Last name</string>
    <string name="person_gender_detail">Gender</string>
    <string name="male_gender_detail">Male</string>
    <string name="female_gender_detail">Female</string>

    <!--==============-->
    <!-- Menu Options -->
    <!--==============-->
    <string name="open_filter">Filter</string>
    <string name="open_search">Search</string>
    <string name="open_settings">Settings</string>
    <string name="go_back">Go Up</string>
    <string name="go_to_top">Go to Top</string>
    <string name="title_activity_map_demo">Map</string>
</resources>
