<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_baptism_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_baptism_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_baptism_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_birth_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_birth_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_birth_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_census_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_census_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_census_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_christening_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_christening_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_christening_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_death_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_death_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_death_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_marriage_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_marriage_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_marriage_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_fathers_side_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_fathers_side_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_fathers_side_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_mothers_side_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_mothers_side_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_mothers_side_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_male_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_male_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_male_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/darkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_female_events_option"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_female_events_detail"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <Switch android:id="@+id/filter_female_events_switch"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>